test/fixtures/configs/pages/post/fail/payload/styles.js
exports.notObject = {
  url: '/users/1/projects/1/pages',
  method: 'post',
  headers: {
    authorization: 'token userToken'
  },
  payload: {
    x: 1,
    y: 1,
    styles: 9001
  }
};
